--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,31 +4,27 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  run:
+    # worker runs on latest ubuntu
     runs-on: ubuntu-latest
-    permissions:
-      contents: 'read'
-      id-token: 'write'
 
     steps:
-      - uses: actions/checkout@v3
+      # checkout to our repository so we have access to the source code
+      - uses: actions/checkout@v2
 
-      - name: Setup GCP Service Account
-        uses: google-github-actions/setup-gcloud@master
+      # the actual deployment to google
+      - name: Cloud Functions Deploy
+        uses: google-github-actions/deploy-cloud-functions@v0.1.2
         with:
-          project_id: ${{secrets.GCP_PROJECT_ID}}
-          service_account_key: ${{secrets.GCP_SA_KEY}}
-          export_default_credentials: true
-
-      - name: 'deploy'
-        id: deploy
-        uses: 'google-github-actions/deploy-cloud-functions@v0'
-        with:
+          credentials: ${{ secrets.GCP_SA_KEY }}
           name: ticket-cart-checker
-          runtime: 'nodejs16'
-          project_id: ${{secrets.GCP_PROJECT_ID}}
-          entry_point: functions.main
-          source_dir: /ticket-cart-checker
-
-      - name: test the url
-        run: curl "${{ steps.deploy.outputs.url }}"
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          source_dir: ticket-cart-checker
+          # name of our function in our main.py file, defaults to the resource name suffix
+          entry_point: main
+          # runtime to use for the function
+          runtime: nodejs16
+          # the function execution timeout
+          timeout: 60
+          # the maximum number of instances for the function.
+          max_instances: 3
