--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,7 +14,7 @@ jobs:
 
       # the actual deployment to google
       - name: Cloud Functions Deploy
-        uses: google-github-actions/deploy-cloud-functions@v0.1.2
+        uses: google-github-actions/setup-gcloud@master
         with:
           credentials: ${{ secrets.GCP_SA_KEY }}
           name: ticket-cart-checker
