Test CI github V2

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,27 +4,33 @@ on:
     branches: [ main ]
 
 jobs:
-  run:
-    # worker runs on latest ubuntu
+  job_id:
     runs-on: ubuntu-latest
+    permissions:
+      contents: 'read'
+      id-token: 'write'
 
     steps:
-      # checkout to our repository so we have access to the source code
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      # the actual deployment to google
-      - name: Cloud Functions Deploy
+      - id: auth
         uses: google-github-actions/setup-gcloud@master
         with:
-          credentials: ${{ secrets.GCP_SA_KEY }}
-          name: ticket-cart-checker
           project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+
+      - id: 'deploy'
+        uses: 'google-github-actions/deploy-cloud-functions@v0'
+        with:
+          name: 'ticket-cart-checker'
+          runtime: 'nodejs16'
           source_dir: ticket-cart-checker
-          # name of our function in our main.py file, defaults to the resource name suffix
           entry_point: main
-          # runtime to use for the function
-          runtime: nodejs16
-          # the function execution timeout
-          timeout: 60
-          # the maximum number of instances for the function.
-          max_instances: 3
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+
+      # Example of using the output
+      - id: 'test'
+        run: 'curl "${{ steps.deploy.outputs.url }}"'
+
+
+
