--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,10 +14,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - id: auth
-        uses: google-github-actions/setup-gcloud@main
+        uses: 'google-github-actions/auth@v0'
         with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
 
       - id: 'deploy'
         uses: 'google-github-actions/deploy-cloud-functions@v0'
