--- a/event-listing/package.json
+++ b/event-listing/package.json
@@ -1,4 +1,15 @@
 {
   "name": "sample-http",
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "scripts": {
+    "start": "npx functions-framework --target=main --signature-type=http"
+  },
+  "dependencies": {
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "pg": "^8.8.0"
+  },
+  "devDependencies": {
+    "@google-cloud/functions-framework": "^3.1.2"
+  }
 }
