--- a/vod-gate/package.json
+++ b/vod-gate/package.json
@@ -6,12 +6,14 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "@google-cloud/storage": "^6.5.2",
     "body-parser": "^1.20.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4"
   },
