--- a/event-listing/package.json
+++ b/event-listing/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@google-cloud/functions-framework": "^3.1.2"
