--- a/event-manager/package.json
+++ b/event-manager/package.json
@@ -13,7 +13,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "pg": "^8.8.0",
-    "pg-hstore": "^2.3.4"
+    "pg-hstore": "^2.3.4",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
