--- a/ticket-booking/package.json
+++ b/ticket-booking/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
@@ -15,7 +16,7 @@
     "mongodb": "^4.10.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
