--- a/vod-gate/package.json
+++ b/vod-gate/package.json
@@ -15,7 +15,8 @@
     "http-errors": "~1.6.3",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.8.0",
-    "pg-hstore": "^2.3.4"
+    "pg-hstore": "^2.3.4",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
