--- a/ticket-booking/package.json
+++ b/ticket-booking/package.json
@@ -16,7 +16,7 @@
     "mongodb": "^4.10.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "uuid": "^9.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
