Implement the route for cleaning the temporary cart

--- a/ticket-cart-checker/package.json
+++ b/ticket-cart-checker/package.json
@@ -8,6 +8,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "pg": "^8.8.0",
+    "mongodb": "^4.10.0",
     "cors": "^2.8.5"
   },
   "devDependencies": {
