--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,13 @@
-FROM nginx:1.15.8
+### STAGE 1: Build ###
+FROM node:alpine AS build
+WORKDIR /usr/src/app
+COPY package.json ./
+RUN npm install
+COPY . .
+RUN npm run build --prod
+
+### STAGE 2: Run ###
+FROM nginx:alpine
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=build /usr/src/app/dist/client /usr/share/nginx/html
 EXPOSE 80
-COPY conf/default.conf /etc/nginx/conf.d/
-RUN rm -rf /usr/share/nginx/html/*
-COPY dist /usr/share/nginx/html
-CMD ["nginx", "-g", "daemon off;"]
