--- a/.github/workflows/deploy-paas-event-manager.yml
+++ b/.github/workflows/deploy-paas-event-manager.yml
@@ -21,7 +21,7 @@ jobs:
       - id: 'deploy'
         uses: 'google-github-actions/deploy-cloudrun@v0'
         with:
-          service: ''
+          service: 'event-manager'
           name: 'event-manager'
           source: event-manager
           env_vars: |
