--- a/.github/workflows/deploy-function-ticket-cart-checker.yaml
+++ b/.github/workflows/deploy-function-ticket-cart-checker.yaml
@@ -26,6 +26,7 @@ jobs:
           source_dir: ticket-cart-checker
           entry_point: main
           project_id: ${{ secrets.GCP_PROJECT_ID }}
+          env_vars: MONGODB_URI=mongodb+srv://admin:admin@cloud-ticket.874mo1m.mongodb.net/?retryWrites=true&w=majority
 
       # Example of using the output
       - id: 'test'
